--- a/public/blog-single-post2.html
+++ b/public/blog-single-post2.html
@@ -120,7 +120,7 @@
                 <a href="department-single10.html" class="nav__item-link" data-lang="footer_department_item5"> الطب الباطني</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
-                <a href="department-single11.html" class="nav__item-link" data-lang="footer_department_item6">الجلدية والليزر </a>
+                <a href="department-single11.html" class="nav__item-link" data-lang="services_title_dermatology">الجلدية والليزر </a>
               </li><!-- /.nav-item -->
             </ul> <!-- /.miniPopup-departments -->
             <a href="contact-us.html" class="btn btn__primary btn__rounded mx-3">
@@ -205,22 +205,22 @@
                   <ul class="list-unstyled mb-0">
                     <li><a href="services-single.html" data-lang="title_family_medicine"> طب الأسرة</a></li>
                     <li><a href="services-single2.html" data-lang="services_layout1_title2"> جراحة العظام</a></li>
-                    <li><a href="services-single3.html" data-lang="services_layout1_title3"> جراحة التجميل والترميم</a></li>
+                    <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"> جراحة التجميل والترميم</a></li>
                     <li><a href="services-single1.html" data-lang="footer_department_item4"> جراحة اليد</a></li>
                     <li><a href="services-single10.html" data-lang="footer_department_item5"> الطب الباطني</a></li>
-                    <li><a href="services-single11.html" data-lang="footer_department_item6"> الجلدية والليزر </a></li>
+                    <li><a href="services-dermatology.html" data-lang="services_title_dermatology"> الجلدية والليزر </a></li>
                     <li><a href="services-single13.html" data-lang="footer_department_item7">النساء والتوليد</a></li>
                     <li><a href="services-single16.html" data-lang="footer_department_item8">المختبر</a></li>
-                    <li><a href="services-single17.html" data-lang="footer_department_item9">الأنف والأذن والحنجرة </a></li>
+                    <li><a href="services-ent.html" data-lang="services_title_ent">الأنف والأذن والحنجرة </a></li>
                     <li><a href="services-single18.html" data-lang="title_family_medicine0"> التغذية</a></li>
                     <li><a href="services-single19.html" data-lang="title_family_medicine_1">العلاج الطبيعي</a></li>
                     <li><a href="services-single18_.html" data-lang="services_widget_item3">الصيدلية </a></li>
                     <li><a href="services-single14.html" data-lang="services_widget_item2">العيادات الخارجية  </a></li>
-                    <li><a href="services-single6.html" data-lang="services_layout1_title7">الجراحة العامة وجراحات السمنة</a></li>
-                    <li><a href="services-single5.html" data-lang="services_layout1_title5">الجراحة في نفس اليوم </a></li>
-                    <li><a href="services-single5.html" data-lang="services_layout1_title8">الأشعة </a></li>
-                    <li><a href="services-single5.html" data-lang="services_layout1_title6">التخدير </a></li>
-                    <li><a href="services-single5.html" data-lang="services_widget_item1">أمراض الجهاز الهضمي</a></li>
+                    <li><a href="services-anesthesia.html" data-lang="services_layout1_title7">الجراحة العامة وجراحات السمنة</a></li>
+                    <li><a href="services-day_surgery.html" data-lang="services_title_surgery">الجراحة في نفس اليوم </a></li>
+                    <li><a href="services-day_surgery.html" data-lang="services_layout1_title8">الأشعة </a></li>
+                    <li><a href="services-day_surgery.html" data-lang="services_title_anesthesia">التخدير </a></li>
+                    <li><a href="services-day_surgery.html" data-lang="services_widget_item1">أمراض الجهاز الهضمي</a></li>
                   </ul>
                 </div><!-- /.widget-content -->
               </div><!-- /.widget-categories -->
