--- a/public/blog.html
+++ b/public/blog.html
@@ -120,7 +120,7 @@
                 <a href="department-single10.html" class="nav__item-link" data-lang="footer_department_item5"> الطب الباطني</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
-                <a href="department-single11.html" class="nav__item-link" data-lang="footer_department_item6">الجلدية والليزر </a>
+                <a href="department-single11.html" class="nav__item-link" data-lang="services_title_dermatology">الجلدية والليزر </a>
               </li><!-- /.nav-item -->
             </ul> <!-- /.miniPopup-departments -->
             <a href="contact-us.html" class="btn btn__primary btn__rounded mx-3">
