--- a/public/services-day_surgery.html
+++ b/public/services-day_surgery.html
@@ -120,7 +120,7 @@
                 <a href="department-single10.html" class="nav__item-link" data-lang="footer_department_item5"> الطب الباطني</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
-                <a href="department-single11.html" class="nav__item-link" data-lang="footer_department_item6">الجلدية والليزر </a>
+                <a href="department-single11.html" class="nav__item-link" data-lang="services_title_dermatology">الجلدية والليزر </a>
               </li><!-- /.nav-item -->
             </ul> <!-- /.miniPopup-departments -->
             <a href="contact-us.html" class="btn btn__primary btn__rounded mx-3">
@@ -142,8 +142,8 @@
             <div class="pagetitle__icon">
               <i class="icon-microscope"></i>
             </div>
-            <h1 class="pagetitle__heading" data-lang="services_layout1_title5">جراحات اليوم الواحد </h1>
-            <p class="pagetitle__desc mb-30" data-lang="services_single5_pagetitle">جراحات اليوم الواحد هي إجراءات جراحية يتم إجراؤها دون الحاجة إلى مبيت المريض في المستشفى، مما يسمح له بالعودة إلى المنزل في نفس اليوم، مع تحقيق تعافٍ أسرع ورعاية طبية فعالة.</p>
+            <h1 class="pagetitle__heading" data-lang="services_title_day_surgery">جراحات اليوم الواحد </h1>
+            <p class="pagetitle__desc mb-30" data-lang="services_sub_heading_day_surgery">جراحات اليوم الواحد هي إجراءات جراحية يتم إجراؤها دون الحاجة إلى مبيت المريض في المستشفى، مما يسمح له بالعودة إلى المنزل في نفس اليوم، مع تحقيق تعافٍ أسرع ورعاية طبية فعالة.</p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
         </div><!-- /.row -->
@@ -164,8 +164,8 @@
                   </div>
                 </a>
               </div><!-- /.video-banner -->
-              <p class="text-block__desc mb-20" data-lang="services_single5_text1">جراحات اليوم الواحد هي نوع من الإجراءات الجراحية التي تتيح للمريض الخضوع للجراحة والعودة إلى المنزل في نفس اليوم دون الحاجة إلى المبيت في المستشفى. </p>
-              <p class="text-block__desc mb-20" data-lang="services_single5_text1">يعتمد هذا النوع من الجراحات على تقنيات طبية متقدمة تضمن الحد الأدنى من التدخل الجراحي، مما يساهم في تسريع عملية التعافي وتقليل المخاطر المرتبطة بالإقامة الطويلة. يتم تطبيقها في مختلف التخصصات الطبية، مثل جراحة العظام، جراحة التجميل، وجراحة الجهاز الهضمي، مما يجعلها خيارًا آمنًا وفعالًا للعديد من المرضى.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text1_day_surgery">جراحات اليوم الواحد هي نوع من الإجراءات الجراحية التي تتيح للمريض الخضوع للجراحة والعودة إلى المنزل في نفس اليوم دون الحاجة إلى المبيت في المستشفى. </p>
+              <p class="text-block__desc mb-20" data-lang="services_text1_day_surgery">يعتمد هذا النوع من الجراحات على تقنيات طبية متقدمة تضمن الحد الأدنى من التدخل الجراحي، مما يساهم في تسريع عملية التعافي وتقليل المخاطر المرتبطة بالإقامة الطويلة. يتم تطبيقها في مختلف التخصصات الطبية، مثل جراحة العظام، جراحة التجميل، وجراحة الجهاز الهضمي، مما يجعلها خيارًا آمنًا وفعالًا للعديد من المرضى.</p>
             </div><!-- /.text-block -->
 
             <div class="text-block mb-50">
@@ -242,19 +242,19 @@
                   <ul class="list-unstyled mb-0">
                     <li><a href="services-single.html" data-lang= "title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single2.html" data-lang="services_layout1_title2"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single3.html" data-lang="services_layout1_title3"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single1.html" data-lang="footer_department_item4"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single5.html" data-lang="services_layout1_title5"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single6.html" data-lang="services_layout1_title6"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-day_surgery.html" data-lang="services_title_day_surgery"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-anesthesia.html" data-lang="services_title_anesthesia"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single_1.html" data-lang="services_layout1_title8"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single9.html" data-lang="services_layout1_title7"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single10.html" data-lang="footer_department_item5"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single11.html" data-lang="footer_department_item6"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-dermatology.html" data-lang="services_title_dermatology"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single12.html" data-lang="services_widget_item1"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single13.html" data-lang="footer_department_item7"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single14.html" data-lang="services_widget_item2"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single16.html" data-lang="footer_department_item8"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single17.html" data-lang="footer_department_item9"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-ent.html" data-lang="services_title_ent"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single18.html" data-lang="title_family_medicine0"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single19.html" data-lang="title_family_medicine_1"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single18_.html" data-lang="services_widget_item3"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
