--- a/public/services-dermatology.html
+++ b/public/services-dermatology.html
@@ -30,8 +30,8 @@
             <div class="pagetitle__icon">
               <i class="icon-microscope"></i>
             </div>
-            <h1 class="pagetitle__heading" data-lang="footer_department_item6">الأمراض الجلدية والليزر </h1>
-            <p class="pagetitle__desc mb-30" data-lang="services_single11_pagetitle">يمتلك مجمع جاردينيا الطبي مجموعة متميزة من الأطباء المتخصصين في علاج جميع الحالات التي تؤثر على البشرة والجلد، سواء كانت روتين العناية بالبشرة أو حالات أكثر تعقيدًا، ويتم توفير تشخيصات وطرق علاج متطورة وعلى أعلى مستوى من الخبرة الخاصة باحتياجات المريض الخاصة بالأمراض الجلدية.</p>
+            <h1 class="pagetitle__heading" data-lang="services_title_dermatology">الأمراض الجلدية والليزر </h1>
+            <p class="pagetitle__desc mb-30" data-lang="services_sub_heading_dermatology">يمتلك مجمع جاردينيا الطبي مجموعة متميزة من الأطباء المتخصصين في علاج جميع الحالات التي تؤثر على البشرة والجلد، سواء كانت روتين العناية بالبشرة أو حالات أكثر تعقيدًا، ويتم توفير تشخيصات وطرق علاج متطورة وعلى أعلى مستوى من الخبرة الخاصة باحتياجات المريض الخاصة بالأمراض الجلدية.</p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
         </div><!-- /.row -->
@@ -52,8 +52,8 @@
                   </div>
                 </a>
               </div><!-- /.video-banner -->
-              <p class="text-block__desc mb-20" data-lang="services_single11_text1">أطباء الجلدية في مجمع جاردينيا الطبي هم متخصصون في تشخيص وعلاج الأمراض الجلدية المختلفة باستخدام أحدث الأساليب الطبية. يعمل الأطباء على معالجة الحالات الجلدية المزمنة مثل حب الشباب، الأكزيما، والتصبغات، بالإضافة إلى تقديم استشارات تجميلية لتحسين مظهر البشرة والشعر. يواصل الأطباء تحديث مهاراتهم ومعرفتهم من خلال التدريب المستمر ليظلوا على دراية بأحدث التقنيات والعلاجات المتاحة في مجال طب الجلد. كما يتمتعون بخبرة واسعة في استخدام تقنيات الليزر لعلاج مختلف مشاكل الجلد بكفاءة وأمان.</p>
-              <p class="text-block__desc mb-20" data-lang="services_single11_text2"> كما يقدم القسم حلولاً فعالة لعلاج الأمراض الجلدية المزمنة مثل الأكزيما، حب الشباب، التصبغات الجلدية، بالإضافة إلى تجميل البشرة باستخدام تقنيات الليزر المتطورة. يضم الفريق الطبي أطباء متخصصين في الأمراض الجلدية، مدعومين بتكنولوجيا حديثة لضمان نتائج ممتازة وآمنة.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text1_dermatology">أطباء الجلدية في مجمع جاردينيا الطبي هم متخصصون في تشخيص وعلاج الأمراض الجلدية المختلفة باستخدام أحدث الأساليب الطبية. يعمل الأطباء على معالجة الحالات الجلدية المزمنة مثل حب الشباب، الأكزيما، والتصبغات، بالإضافة إلى تقديم استشارات تجميلية لتحسين مظهر البشرة والشعر. يواصل الأطباء تحديث مهاراتهم ومعرفتهم من خلال التدريب المستمر ليظلوا على دراية بأحدث التقنيات والعلاجات المتاحة في مجال طب الجلد. كما يتمتعون بخبرة واسعة في استخدام تقنيات الليزر لعلاج مختلف مشاكل الجلد بكفاءة وأمان.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text2_dermatology"> كما يقدم القسم حلولاً فعالة لعلاج الأمراض الجلدية المزمنة مثل الأكزيما، حب الشباب، التصبغات الجلدية، بالإضافة إلى تجميل البشرة باستخدام تقنيات الليزر المتطورة. يضم الفريق الطبي أطباء متخصصين في الأمراض الجلدية، مدعومين بتكنولوجيا حديثة لضمان نتائج ممتازة وآمنة.</p>
             </div><!-- /.text-block -->
 
             <ul class="list-items list-unstyled mb-60 pl-40">
@@ -135,19 +135,19 @@
                   <ul class="list-unstyled mb-0">
                     <li><a href="services-single.html" data-lang= "title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single2.html" data-lang="services_layout1_title2"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single3.html" data-lang="services_layout1_title3"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single1.html" data-lang="footer_department_item4"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single5.html" data-lang="services_layout1_title5"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single6.html" data-lang="services_layout1_title6"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-day_surgery.html" data-lang="services_title_surgery"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-anesthesia.html" data-lang="services_title_anesthesia"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single_1.html" data-lang="services_layout1_title8"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single9.html" data-lang="services_layout1_title7"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single10.html" data-lang="footer_department_item5"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single11.html" data-lang="footer_department_item6"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-dermatology.html" data-lang="services_title_dermatology"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single12.html" data-lang="services_widget_item1"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single13.html" data-lang="footer_department_item7"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single14.html" data-lang="services_widget_item2"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single16.html" data-lang="footer_department_item8"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single17.html" data-lang="footer_department_item9"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-ent.html" data-lang="services_title_ent"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single18.html" data-lang="title_family_medicine0"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single19.html" data-lang="title_family_medicine_1"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single18_.html" data-lang="services_widget_item3"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
