--- a/public/services-ent.html
+++ b/public/services-ent.html
@@ -30,8 +30,8 @@
             <div class="pagetitle__icon">
               <i class="icon-microscope"></i>
             </div>
-            <h1 class="pagetitle__heading" data-lang="footer_department_item9">الأنف والأذن والحنجرة </h1>
-            <p class="pagetitle__desc mb-30" data-lang="services_single17_pagetitle">في مجمع جاردينيا الطبي نقدم رعاية طبية متخصصة لعلاج مجموعة واسعة من المشكلات المتعلقة بالجهاز التنفسي العلوي، مثل أمراض الأنف، الأذن، الحنجرة، والرقبة. يتعامل الأطباء مع حالات مثل التهاب الأذن، مشاكل السمع، التهاب الحلق، انسداد الأنف، واضطرابات الصوت. كما يقدمون علاجات جراحية وغير جراحية باستخدام أحدث التقنيات الطبية لضمان الراحة والشفاء التام للمرضى.</p>
+            <h1 class="pagetitle__heading" data-lang="services_title_ent">الأنف والأذن والحنجرة </h1>
+            <p class="pagetitle__desc mb-30" data-lang="services_sub_heading_ent">في مجمع جاردينيا الطبي نقدم رعاية طبية متخصصة لعلاج مجموعة واسعة من المشكلات المتعلقة بالجهاز التنفسي العلوي، مثل أمراض الأنف، الأذن، الحنجرة، والرقبة. يتعامل الأطباء مع حالات مثل التهاب الأذن، مشاكل السمع، التهاب الحلق، انسداد الأنف، واضطرابات الصوت. كما يقدمون علاجات جراحية وغير جراحية باستخدام أحدث التقنيات الطبية لضمان الراحة والشفاء التام للمرضى.</p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
         </div><!-- /.row -->
@@ -52,8 +52,8 @@
                   </div>
                 </a>
               </div><!-- /.video-banner -->
-              <p class="text-block__desc mb-20" data-lang="services_single17_text1">قسم الأنف والأذن والحنجرة في مجمع جاردينيا الطبي يقدم رعاية متخصصة في تشخيص وعلاج الحالات المتعلقة بالجهاز التنفسي العلوي، الأذن، الأنف، والحنجرة.</p>
-              <p class="text-block__desc mb-20" data-lang="services_single17_text2"> يتمتع الأطباء بخبرة واسعة في التعامل مع مجموعة من الحالات الشائعة والمعقدة، بدءًا من التهابات الأذن والجيوب الأنفية إلى اضطرابات الصوت والبلع.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text1_ent">قسم الأنف والأذن والحنجرة في مجمع جاردينيا الطبي يقدم رعاية متخصصة في تشخيص وعلاج الحالات المتعلقة بالجهاز التنفسي العلوي، الأذن، الأنف، والحنجرة.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text2_ent"> يتمتع الأطباء بخبرة واسعة في التعامل مع مجموعة من الحالات الشائعة والمعقدة، بدءًا من التهابات الأذن والجيوب الأنفية إلى اضطرابات الصوت والبلع.</p>
             </div><!-- /.text-block -->
 
             <ul class="list-items list-unstyled mb-60 pl-40">
@@ -135,19 +135,19 @@
                   <ul class="list-unstyled mb-0">
                     <li><a href="services-single.html" data-lang= "title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single2.html" data-lang="services_layout1_title2"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single3.html" data-lang="services_layout1_title3"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single1.html" data-lang="footer_department_item4"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single5.html" data-lang="services_layout1_title5"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single6.html" data-lang="services_layout1_title6"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-day_surgery.html" data-lang="services_title_surgery"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-anesthesia.html" data-lang="services_title_anesthesia"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single_1.html" data-lang="services_layout1_title8"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single9.html" data-lang="services_layout1_title7"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single10.html" data-lang="footer_department_item5"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single11.html" data-lang="footer_department_item6"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-dermatology.html" data-lang="services_title_dermatology"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single12.html" data-lang="services_widget_item1"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single13.html" data-lang="footer_department_item7"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single14.html" data-lang="services_widget_item2"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single16.html" data-lang="footer_department_item8"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single17.html" data-lang="footer_department_item9"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-ent.html" data-lang="services_title_ent"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single18.html" data-lang="title_family_medicine0"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single19.html" data-lang="title_family_medicine_1"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-single18_.html" data-lang="services_widget_item3"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
