--- a/public/services-radiology.html
+++ b/public/services-radiology.html
@@ -30,8 +30,8 @@
             <div class="pagetitle__icon">
               <i class="icon-microscope"></i>
             </div>
-            <h1 class="pagetitle__heading" data-lang="services_layout1_title8"> الأشعة</h1>
-            <p class="pagetitle__desc mb-30" data-lang="services_single_1_pagetitle">GMC Radiology هي منشأة تصوير تشخيصية رائدة تشمل التصوير بالرنين المغناطيسي المفتوح 1.5 تسلا ، الموجات فوق الصوتية ثلاثية الأبعاد أو رباعية الأبعاد والأشعة السينية
+            <h1 class="pagetitle__heading" data-lang="services_title_radiology"> الأشعة</h1>
+            <p class="pagetitle__desc mb-30" data-lang="services_sub_heading_radiology">GMC Radiology هي منشأة تصوير تشخيصية رائدة تشمل التصوير بالرنين المغناطيسي المفتوح 1.5 تسلا ، الموجات فوق الصوتية ثلاثية الأبعاد أو رباعية الأبعاد والأشعة السينية
             </p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
@@ -44,7 +44,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-8">
             <div class="text-block mb-50">
-              <p class="text-block__desc mb-20 font-weight-bold color-secondary" data-lang="services_single_1_text">يتولى أطباء الأشعة الإشراف على إجراءات التصوير التشخيصي باستخدام أحدث التقنيات لضمان دقة التشخيص وسلامة المرضى. يشمل فريقهم أطباء الأشعة، فنيي الأشعة، وأخصائيي التصوير الطبي، الذين يعملون جنبًا إلى جنب مع الأطباء المعالجين لتقديم صور دقيقة تساعد في تشخيص الحالات المرضية بفعالية. يبدأ عملهم من اختيار التقنية المناسبة لكل حالة، مرورًا بتنفيذ الفحوصات بدقة وأمان، وحتى تحليل النتائج وتقديم التقارير اللازمة لضمان خطة علاجية دقيقة ومتكاملة.</p>
+              <p class="text-block__desc mb-20 font-weight-bold color-secondary" data-lang="services_text1_radiology">يتولى أطباء الأشعة الإشراف على إجراءات التصوير التشخيصي باستخدام أحدث التقنيات لضمان دقة التشخيص وسلامة المرضى. يشمل فريقهم أطباء الأشعة، فنيي الأشعة، وأخصائيي التصوير الطبي، الذين يعملون جنبًا إلى جنب مع الأطباء المعالجين لتقديم صور دقيقة تساعد في تشخيص الحالات المرضية بفعالية. يبدأ عملهم من اختيار التقنية المناسبة لكل حالة، مرورًا بتنفيذ الفحوصات بدقة وأمان، وحتى تحليل النتائج وتقديم التقارير اللازمة لضمان خطة علاجية دقيقة ومتكاملة.</p>
               <div class="video-banner-layout3 bg-overlay mb-50">
                 <img src="assets/images/banners/7.jpg" alt="banner">
                 <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4">
@@ -53,9 +53,9 @@
                   </div>
                 </a>
               </div><!-- /.video-banner -->
-              <p class="text-block__desc mb-20" data-lang="services_single_1_text1">يقدم قسم الأشعة في مجمع جاردينيا الطبي خدمات تصوير تشخيصي متكاملة بأحدث التقنيات لضمان دقة التشخيص وجودة الرعاية الصحية.</p>
-              <p class="text-block__desc mb-20" data-lang="services_single_1_text2">تشمل خدماتنا التصوير بالرنين المغناطيسي المفتوح بقوة 1.5 تسلا، الذي يوفر صورًا عالية الدقة لتشخيص الحالات المختلفة بفعالية، بالإضافة إلى الموجات فوق الصوتية ثلاثية ورباعية الأبعاد التي تتيح رؤية تفصيلية للأعضاء والأنسجة، مما يعزز دقة التشخيص خاصة في حالات متابعة الحمل والتصوير القلبي.</p>
-              <p class="text-block__desc mb-20" data-lang="services_single_1_textt"> كما نوفر خدمات الأشعة السينية الرقمية التي تسهم في الكشف السريع عن الكسور والمشاكل الصحية الأخرى، مع الحرص على تقليل جرعة الإشعاع لضمان سلامة المرضى.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text2_radiology">يقدم قسم الأشعة في مجمع جاردينيا الطبي خدمات تصوير تشخيصي متكاملة بأحدث التقنيات لضمان دقة التشخيص وجودة الرعاية الصحية.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text3_radiology">تشمل خدماتنا التصوير بالرنين المغناطيسي المفتوح بقوة 1.5 تسلا، الذي يوفر صورًا عالية الدقة لتشخيص الحالات المختلفة بفعالية، بالإضافة إلى الموجات فوق الصوتية ثلاثية ورباعية الأبعاد التي تتيح رؤية تفصيلية للأعضاء والأنسجة، مما يعزز دقة التشخيص خاصة في حالات متابعة الحمل والتصوير القلبي.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text4_radiology"> كما نوفر خدمات الأشعة السينية الرقمية التي تسهم في الكشف السريع عن الكسور والمشاكل الصحية الأخرى، مع الحرص على تقليل جرعة الإشعاع لضمان سلامة المرضى.</p>
             </div><!-- /.text-block -->
 
             <div class="text-block mb-50">
@@ -130,24 +130,24 @@
                 <h5 class="widget__title" data-lang="services_widget_title">الخدمات الطبية</h5>
                 <div class="widget-content">
                   <ul class="list-unstyled mb-0">
-                    <li><a href="services-single.html" data-lang= "title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single2.html" data-lang="services_layout1_title2"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-family_medicine.html" data-lang= "services_title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-orthopedic_surgery.html" data-lang="services_title_orthopedic_surgery"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single1.html" data-lang="footer_department_item4"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-hand_surgery.html" data-lang="services_title_hand_surgery"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-day_surgery.html" data-lang="services_title_surgery"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-anesthesia.html" data-lang="services_title_anesthesia"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single_1.html" data-lang="services_layout1_title8"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single9.html" data-lang="services_layout1_title7"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single10.html" data-lang="footer_department_item5"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-radiology.html" data-lang="services_title_radiology"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-general_surgery.html" data-lang="services_title_general_surgery"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-internal_medicine.html" data-lang="services_title_internal_medicine"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-dermatology.html" data-lang="services_title_dermatology"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single12.html" data-lang="services_widget_item1"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single13.html" data-lang="footer_department_item7"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single14.html" data-lang="services_widget_item2"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single16.html" data-lang="footer_department_item8"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-gastroenterology.html" data-lang="services_title_gastroenterology"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-obstetrics.html" data-lang="services_title_obstetrics"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-outpatient.html" data-lang="services_title_outpatient"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-laboratory.html" data-lang="services_title_laboratory"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-ent.html" data-lang="services_title_ent"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single18.html" data-lang="title_family_medicine0"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single19.html" data-lang="title_family_medicine_1"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single18_.html" data-lang="services_widget_item3"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-nutrition.html" data-lang="services_title_nutrition"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-physiotherapy.html" data-lang="services_title_physiotherapy"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-pharmacy.html" data-lang="services_title_pharmacy"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
                   </ul>
                 </div><!-- /.widget-content -->
               </div><!-- /.widget-services -->
