--- a/public/blog-single-post.html
+++ b/public/blog-single-post.html
@@ -105,7 +105,7 @@
             </div>
             <ul id="miniPopup-departments" class="miniPopup miniPopup-departments dropdown-menu">
               <li class="nav__item">
-                <a href="department-single.html" class="nav__item-link" data-lang="title_family_medicine">طب الأسرة</a>
+                <a href="department-single.html" class="nav__item-link" data-lang="services_title_family_medicine">طب الأسرة</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
                 <a href="department-single2.html" class="nav__item-link" data-lang="footer_department_item2"> العظام</a>
@@ -114,10 +114,10 @@
                 <a href="department-single3.html" class="nav__item-link" data-lang="footer_department_item3"> التجميل</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
-                <a href="department-single1.html" class="nav__item-link" data-lang="footer_department_item4"> جراحة اليد</a>
+                <a href="department-single1.html" class="nav__item-link" data-lang="services_title_hand_surgery"> جراحة اليد</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
-                <a href="department-single10.html" class="nav__item-link" data-lang="footer_department_item5"> الطب الباطني</a>
+                <a href="department-single10.html" class="nav__item-link" data-lang="services_title_internal_medicine"> الطب الباطني</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
                 <a href="department-single11.html" class="nav__item-link" data-lang="services_title_dermatology">الجلدية والليزر </a>
@@ -214,24 +214,24 @@
                 <h5 class="widget__title" data-lang="department_item">الأقسام</h5>
                 <div class="widget-content">
                   <ul class="list-unstyled mb-0">
-                    <li><a href="services-single.html" data-lang="title_family_medicine"> طب الأسرة</a></li>
-                    <li><a href="services-single2.html" data-lang="services_layout1_title2"> جراحة العظام</a></li>
+                    <li><a href="services-family_medicine.html" data-lang="services_title_family_medicine"> طب الأسرة</a></li>
+                    <li><a href="services-orthopedic_surgery.html" data-lang="services_title_orthopedic_surgery"> جراحة العظام</a></li>
                     <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"> جراحة التجميل والترميم</a></li>
-                    <li><a href="services-single1.html" data-lang="footer_department_item4"> جراحة اليد</a></li>
-                    <li><a href="services-single10.html" data-lang="footer_department_item5"> الطب الباطني</a></li>
+                    <li><a href="services-hand_surgery.html" data-lang="services_title_hand_surgery"> جراحة اليد</a></li>
+                    <li><a href="services-internal_medicine.html" data-lang="services_title_internal_medicine"> الطب الباطني</a></li>
                     <li><a href="services-dermatology.html" data-lang="services_title_dermatology"> الجلدية والليزر </a></li>
-                    <li><a href="services-single13.html" data-lang="footer_department_item7">النساء والتوليد</a></li>
-                    <li><a href="services-single16.html" data-lang="footer_department_item8">المختبر</a></li>
+                    <li><a href="services-obstetrics.html" data-lang="services_title_obstetrics">النساء والتوليد</a></li>
+                    <li><a href="services-laboratory.html" data-lang="services_title_laboratory">المختبر</a></li>
                     <li><a href="services-ent.html" data-lang="services_title_ent">الأنف والأذن والحنجرة </a></li>
-                    <li><a href="services-single18.html" data-lang="title_family_medicine0"> التغذية</a></li>
-                    <li><a href="services-single19.html" data-lang="title_family_medicine_1">العلاج الطبيعي</a></li>
-                    <li><a href="services-single18_.html" data-lang="services_widget_item3">الصيدلية </a></li>
-                    <li><a href="services-single14.html" data-lang="services_widget_item2">العيادات الخارجية  </a></li>
-                    <li><a href="services-anesthesia.html" data-lang="services_layout1_title7">الجراحة العامة وجراحات السمنة</a></li>
+                    <li><a href="services-nutrition.html" data-lang="services_title_nutrition"> التغذية</a></li>
+                    <li><a href="services-physiotherapy.html" data-lang="services_title_physiotherapy">العلاج الطبيعي</a></li>
+                    <li><a href="services-pharmacy.html" data-lang="services_title_pharmacy">الصيدلية </a></li>
+                    <li><a href="services-outpatient.html" data-lang="services_title_outpatient">العيادات الخارجية  </a></li>
+                    <li><a href="services-anesthesia.html" data-lang="services_title_general_surgery">الجراحة العامة وجراحات السمنة</a></li>
                     <li><a href="services-day_surgery.html" data-lang="services_title_surgery">الجراحة في نفس اليوم </a></li>
-                    <li><a href="services-day_surgery.html" data-lang="services_layout1_title8">الأشعة </a></li>
+                    <li><a href="services-day_surgery.html" data-lang="services_title_radiology">الأشعة </a></li>
                     <li><a href="services-day_surgery.html" data-lang="services_title_anesthesia">التخدير </a></li>
-                    <li><a href="services-day_surgery.html" data-lang="services_widget_item1">أمراض الجهاز الهضمي</a></li>
+                    <li><a href="services-day_surgery.html" data-lang="services_title_gastroenterology">أمراض الجهاز الهضمي</a></li>
                   </ul>
                 </div><!-- /.widget-content -->
               </div><!-- /.widget-categories -->
