--- a/public/blog.html
+++ b/public/blog.html
@@ -105,7 +105,7 @@
             </div>
             <ul id="miniPopup-departments" class="miniPopup miniPopup-departments dropdown-menu">
               <li class="nav__item">
-                <a href="department-single.html" class="nav__item-link" data-lang="title_family_medicine">طب الأسرة</a>
+                <a href="department-single.html" class="nav__item-link" data-lang="services_title_family_medicine">طب الأسرة</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
                 <a href="department-single2.html" class="nav__item-link" data-lang="footer_department_item2"> العظام</a>
@@ -114,10 +114,10 @@
                 <a href="department-single3.html" class="nav__item-link" data-lang="footer_department_item3"> التجميل</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
-                <a href="department-single1.html" class="nav__item-link" data-lang="footer_department_item4"> جراحة اليد</a>
+                <a href="department-single1.html" class="nav__item-link" data-lang="services_title_hand_surgery"> جراحة اليد</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
-                <a href="department-single10.html" class="nav__item-link" data-lang="footer_department_item5"> الطب الباطني</a>
+                <a href="department-single10.html" class="nav__item-link" data-lang="services_title_internal_medicine"> الطب الباطني</a>
               </li><!-- /.nav-item -->
               <li class="nav__item">
                 <a href="department-single11.html" class="nav__item-link" data-lang="services_title_dermatology">الجلدية والليزر </a>
