--- a/public/services-hand_surgery.html
+++ b/public/services-hand_surgery.html
@@ -30,8 +30,8 @@
             <div class="pagetitle__icon">
               <i class="icon-microscope"></i>
             </div>
-            <h1 class="pagetitle__heading" data-lang="footer_department_item4">جراحات اليد </h1>
-            <p class="pagetitle__desc mb-30" data-lang="services_single1_pagetitle">هناك العديد من أنواع العمليات الجراحية المختلفة التي يمكن إجراؤها لليد، اعتمادًا على السبب الأساسي للمشكلة.
+            <h1 class="pagetitle__heading" data-lang="services_title_hand_surgery">جراحات اليد </h1>
+            <p class="pagetitle__desc mb-30" data-lang="services_sub_heading_hand_surgery">هناك العديد من أنواع العمليات الجراحية المختلفة التي يمكن إجراؤها لليد، اعتمادًا على السبب الأساسي للمشكلة.
               يقدم الجراحون ذو الخبرة والكفاءة العالية لدى مجمع جاردينيا الطبي عمليات الجراحة التجميلية واليد 
               على أعلى مستوى وأكبر نسبة نجاح ممكنة.</p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
@@ -54,15 +54,15 @@
                   </div>
                 </a>
               </div><!-- /.video-banner -->
-              <p class="text-block__desc mb-20" data-lang="services_single1_text1">في جراحة اليد، يتعاون الأطباء مع فرق طبية متخصصة من أطباء، ممرضين، وأخصائيين في مجالات مختلفة مثل جراحة العظام، جراحة الأوعية الدموية، والعلاج الطبيعي.</p>
-              <p class="text-block__desc mb-20" data-lang="services_single1_text2"> نقدم رعاية شاملة تبدأ من التشخيص الأول للمشاكل المتعلقة باليد والمعصم، مرورًا بعلاج الإصابات، التشوهات الخلقية، والأمراض العصبية مثل متلازمة النفق الرسغي، وحتى المتابعة المستمرة لضمان استعادة وظيفة اليد بشكل كامل.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text1_hand_surgery">في جراحة اليد، يتعاون الأطباء مع فرق طبية متخصصة من أطباء، ممرضين، وأخصائيين في مجالات مختلفة مثل جراحة العظام، جراحة الأوعية الدموية، والعلاج الطبيعي.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text2_hand_surgery"> نقدم رعاية شاملة تبدأ من التشخيص الأول للمشاكل المتعلقة باليد والمعصم، مرورًا بعلاج الإصابات، التشوهات الخلقية، والأمراض العصبية مثل متلازمة النفق الرسغي، وحتى المتابعة المستمرة لضمان استعادة وظيفة اليد بشكل كامل.</p>
             </div><!-- /.text-block -->
 
             <ul class="list-items list-unstyled mb-60 pl-40">
-              <li data-lang="services_single1_text_list">يعمل أطباء جراحة اليد معك لوضع خطة علاجية فردية بناءً على حالتك الصحية والوظيفية.</li>
-              <li data-lang="services_single1_text_listt">التركيز على استعادة القدرة على الحركة ووظائف اليد بشكل طبيعي.</li>
-              <li data-lang="services_single1_text_list1">إذا كانت حالتك تتطلب علاجًا خاصًا، سيتم تحويلك إلى أطباء متخصصين حسب الحاجة.</li>
-              <li data-lang="services_single1_text_list2">نحن ملتزمون بتوفير رعاية صحية متكاملة تركز على تحسين وظائف اليد في كل مرحلة من مراحل حياتك.</li>
+              <li data-lang="services_list_text1_hand_surgery">يعمل أطباء جراحة اليد معك لوضع خطة علاجية فردية بناءً على حالتك الصحية والوظيفية.</li>
+              <li data-lang="services_list_text2_hand_surgery">التركيز على استعادة القدرة على الحركة ووظائف اليد بشكل طبيعي.</li>
+              <li data-lang="services_list_text3_hand_surgery">إذا كانت حالتك تتطلب علاجًا خاصًا، سيتم تحويلك إلى أطباء متخصصين حسب الحاجة.</li>
+              <li data-lang="services_list_text4_hand_surgery">نحن ملتزمون بتوفير رعاية صحية متكاملة تركز على تحسين وظائف اليد في كل مرحلة من مراحل حياتك.</li>
             </ul>
             <div class="text-block mb-50">
               <h5 class="text-block__title" data-lang="text_block_title">قيمنا الأساسية</h5>
@@ -136,24 +136,24 @@
                 <h5 class="widget__title" data-lang="services_widget_title">الخدمات الطبية</h5>
                 <div class="widget-content">
                   <ul class="list-unstyled mb-0">
-                    <li><a href="services-single.html" data-lang= "title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single2.html" data-lang="services_layout1_title2"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-family_medicine.html" data-lang= "services_title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-orthopedic_surgery.html" data-lang="services_title_orthopedic_surgery"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single1.html" data-lang="footer_department_item4"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-hand_surgery.html" data-lang="services_title_hand_surgery"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-day_surgery.html" data-lang="services_title_surgery"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-anesthesia.html" data-lang="services_title_anesthesia"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single_1.html" data-lang="services_layout1_title8"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single9.html" data-lang="services_layout1_title7"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single10.html" data-lang="footer_department_item5"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-radiology.html" data-lang="services_title_radiology"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-general_surgery.html" data-lang="services_title_general_surgery"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-internal_medicine.html" data-lang="services_title_internal_medicine"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-dermatology.html" data-lang="services_title_dermatology"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single12.html" data-lang="services_widget_item1"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single13.html" data-lang="footer_department_item7"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single14.html" data-lang="services_widget_item2"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single16.html" data-lang="footer_department_item8"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-gastroenterology.html" data-lang="services_title_gastroenterology"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-obstetrics.html" data-lang="services_title_obstetrics"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-outpatient.html" data-lang="services_title_outpatient"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-laboratory.html" data-lang="services_title_laboratory"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-ent.html" data-lang="services_title_ent"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single18.html" data-lang="title_family_medicine0"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single19.html" data-lang="title_family_medicine_1"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single18_.html" data-lang="services_widget_item3"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-nutrition.html" data-lang="services_title_nutrition"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-physiotherapy.html" data-lang="services_title_physiotherapy"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-pharmacy.html" data-lang="services_title_pharmacy"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
                   </ul>
                 </div><!-- /.widget-content -->
               </div><!-- /.widget-services -->
