--- a/public/services-pharmacy.html
+++ b/public/services-pharmacy.html
@@ -30,8 +30,8 @@
             <div class="pagetitle__icon">
               <i class="icon-microscope"></i>
             </div>
-            <h1 class="pagetitle__heading" data-lang="services_widget_item3">الصيدلية</h1>
-            <p class="pagetitle__desc mb-30" data-lang="services_single18__pagetitle">نقدم لك متطلباتك واحتياجاتك من الأدوية ومستحضرات التجميل والمكملات الغذائية من صيدليتنا الخاصة. يمكنك التواصل معنا للحصول على التعليمات والمنتجات الدوائية التي تحتاج إليها.</p>
+            <h1 class="pagetitle__heading" data-lang="services_title_pharmacy">الصيدلية</h1>
+            <p class="pagetitle__desc mb-30" data-lang="services_sub_heading_pharmacy">نقدم لك متطلباتك واحتياجاتك من الأدوية ومستحضرات التجميل والمكملات الغذائية من صيدليتنا الخاصة. يمكنك التواصل معنا للحصول على التعليمات والمنتجات الدوائية التي تحتاج إليها.</p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
         </div><!-- /.row -->
@@ -43,7 +43,8 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-8">
             <div class="text-block mb-50">
-              <p class="text-block__desc mb-20 font-weight-bold color-secondary" data-lang="services_single18__text">توفر صيدلية مجمع جاردينيا الطبي الأدوية والمستلزمات الطبية بإشراف كوادر متخصصة لضمان الاستخدام الآمن والفعّال للعلاجات.</p>
+              <p class="text-block__desc mb-20 font-weight-bold color-secondary" 
+              data-lang="services_text1_pharmacy">توفر صيدلية مجمع جاردينيا الطبي الأدوية والمستلزمات الطبية بإشراف كوادر متخصصة لضمان الاستخدام الآمن والفعّال للعلاجات.</p>
               <div class="video-banner-layout3 bg-overlay mb-50">
                 <img src="assets/images/banners/7.jpg" alt="banner">
                 <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4">
@@ -52,13 +53,13 @@
                   </div>
                 </a>
               </div><!-- /.video-banner -->
-              <p class="text-block__desc mb-20" data-lang="services_single18__text1">تقدم صيدلية مجمع جاردينيا الطبي مجموعة متكاملة من الأدوية والعلاجات بإشراف مختصين لضمان الدقة والسلامة في صرف الأدوية.</p>
-              <p class="text-block__desc mb-20" data-lang="services_single18__text2">كما توفر استشارات دوائية لمساعدة المرضى على الاستخدام الصحيح للعلاج وتجنب أي تفاعلات دوائية.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text2_pharmacy">تقدم صيدلية مجمع جاردينيا الطبي مجموعة متكاملة من الأدوية والعلاجات بإشراف مختصين لضمان الدقة والسلامة في صرف الأدوية.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text3_pharmacy">كما توفر استشارات دوائية لمساعدة المرضى على الاستخدام الصحيح للعلاج وتجنب أي تفاعلات دوائية.</p>
             </div><!-- /.text-block -->
 
             <ul class="list-items list-unstyled mb-60 pl-40">
-              <li data-lang="services_single18__text_list">تضم الصيدلية مستلزمات طبية متنوعة تلبي احتياجات المرضى اليومية. </li>
-              <li data-lang="services_single18__text_listt">يلتزم فريق العمل بتقديم خدمة سريعة ودقيقة لضمان راحة المراجعين.</li>
+              <li data-lang="services_list_text1_pharmacy">تضم الصيدلية مستلزمات طبية متنوعة تلبي احتياجات المرضى اليومية. </li>
+              <li data-lang="services_list_text2_pharmacy">يلتزم فريق العمل بتقديم خدمة سريعة ودقيقة لضمان راحة المراجعين.</li>
             </ul>
             <div class="text-block mb-50">
               <h5 class="text-block__title" data-lang="text_block_title">قيمنا الأساسية</h5>
@@ -133,24 +134,24 @@
                 <h5 class="widget__title" data-lang="services_widget_title">الخدمات الطبية</h5>
                 <div class="widget-content">
                   <ul class="list-unstyled mb-0">
-                    <li><a href="services-single.html" data-lang= "title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single2.html" data-lang="services_layout1_title2"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-family_medicine.html" data-lang= "services_title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-orthopedic_surgery.html" data-lang="services_title_orthopedic_surgery"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single1.html" data-lang="footer_department_item4"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-hand_surgery.html" data-lang="services_title_hand_surgery"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-day_surgery.html" data-lang="services_title_surgery"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-anesthesia.html" data-lang="services_title_anesthesia"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single_1.html" data-lang="services_layout1_title8"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single9.html" data-lang="services_layout1_title7"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single10.html" data-lang="footer_department_item5"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-radiology.html" data-lang="services_title_radiology"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-general_surgery.html" data-lang="services_title_general_surgery"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-internal_medicine.html" data-lang="services_title_internal_medicine"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-dermatology.html" data-lang="services_title_dermatology"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single12.html" data-lang="services_widget_item1"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single13.html" data-lang="footer_department_item7"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single14.html" data-lang="services_widget_item2"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single16.html" data-lang="footer_department_item8"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-gastroenterology.html" data-lang="services_title_gastroenterology"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-obstetrics.html" data-lang="services_title_obstetrics"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-outpatient.html" data-lang="services_title_outpatient"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-laboratory.html" data-lang="services_title_laboratory"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-ent.html" data-lang="services_title_ent"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single18.html" data-lang="title_family_medicine0"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single19.html" data-lang="title_family_medicine_1"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single18_.html" data-lang="services_widget_item3"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-nutrition.html" data-lang="services_title_nutrition"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-physiotherapy.html" data-lang="services_title_physiotherapy"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-pharmacy.html" data-lang="services_title_pharmacy"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
                   </ul>
                 </div><!-- /.widget-content -->
               </div><!-- /.widget-services -->
