--- a/public/services-physiotherapy.html
+++ b/public/services-physiotherapy.html
@@ -30,8 +30,8 @@
             <div class="pagetitle__icon">
               <i class="icon-microscope"></i>
             </div>
-            <h1 class="pagetitle__heading" data-lang="title_family_medicine_1"> العلاج الطبيعي</h1>
-            <p class="pagetitle__desc mb-30" data-lang="services_single19_pagetitle">تم تجهيز قسم العلاج الطبيعي في مجمع غاردينيا الطبي بأحدث أجهزة العلاج الطبيعي وأدوات إعادة التأهيل، ويتم التعامل معها من قبل أكثر الفرق مهنية حيث طوروا مهاراتهم في مجالات مختلفة، مدفوعة باهتماماتهم وخبراتهم. كما أن لدينا أقسام منفصلة للذكور والإناث لراحة المريض، مع ضمان الخصوصية والرعاية الفردية.</p>
+            <h1 class="pagetitle__heading" data-lang="services_title_physiotherapy"> العلاج الطبيعي</h1>
+            <p class="pagetitle__desc mb-30" data-lang="services_sub_heading_physiotherapy">تم تجهيز قسم العلاج الطبيعي في مجمع غاردينيا الطبي بأحدث أجهزة العلاج الطبيعي وأدوات إعادة التأهيل، ويتم التعامل معها من قبل أكثر الفرق مهنية حيث طوروا مهاراتهم في مجالات مختلفة، مدفوعة باهتماماتهم وخبراتهم. كما أن لدينا أقسام منفصلة للذكور والإناث لراحة المريض، مع ضمان الخصوصية والرعاية الفردية.</p>
             <a href="#content" class="scroll-down"><i class="fas fa-long-arrow-alt-down"></i></a>
           </div><!-- /.col-xl-8 -->
         </div><!-- /.row -->
@@ -43,7 +43,7 @@
         <div class="row">
           <div class="col-sm-12 col-md-12 col-lg-8">
             <div class="text-block mb-50">
-              <p class="text-block__desc mb-20 font-weight-bold color-secondary" data-lang="services_single19_text">يتخصص فريق أخصائيي العلاج الطبيعي ذوي الخبرات العالية لدينا في تقييم وتشخيص إصابات الجسم أو الأوجاع والآلام. حيث يمكنهم علاج مشاكل الأنسجة الرخوة مثل العضلات والأوتار إلى العظام والمفاصل ومساعدتك على التعافي بشكل أسرع للعودة إلى أنشطتك بدون ألم. كما يمكن أن يؤدي هذا بدوره إلى تحسين لياقتك، ومنع تكرار الإصابة في المستقبل.</p>
+              <p class="text-block__desc mb-20 font-weight-bold color-secondary" data-lang="services_text1_physiotherapy">يتخصص فريق أخصائيي العلاج الطبيعي ذوي الخبرات العالية لدينا في تقييم وتشخيص إصابات الجسم أو الأوجاع والآلام. حيث يمكنهم علاج مشاكل الأنسجة الرخوة مثل العضلات والأوتار إلى العظام والمفاصل ومساعدتك على التعافي بشكل أسرع للعودة إلى أنشطتك بدون ألم. كما يمكن أن يؤدي هذا بدوره إلى تحسين لياقتك، ومنع تكرار الإصابة في المستقبل.</p>
               <div class="video-banner-layout3 bg-overlay mb-50">
                 <img src="assets/images/banners/7.jpg" alt="banner">
                 <a class="video__btn video__btn-white popup-video" href="https://www.youtube.com/watch?v=nrJtHemSPW4">
@@ -52,14 +52,14 @@
                   </div>
                 </a>
               </div><!-- /.video-banner -->
-              <p class="text-block__desc mb-20" data-lang="services_single19_text1">يقدم قسم العلاج الطبيعي في مجمع جاردينيا الطبي برامج تأهيلية متكاملة تهدف إلى تحسين الحركة، تخفيف الألم، واستعادة الوظائف الجسدية بعد الإصابات أو العمليات الجراحية.</p>
-              <p class="text-block__desc mb-20" data-lang="services_single19_text2"> يعتمد الفريق على أحدث التقنيات العلاجية وأساليب العلاج اليدوي والتمارين العلاجية لمساعدة المرضى على تحقيق أفضل النتائج. كما يتم تصميم خطط العلاج بشكل فردي لتناسب احتياجات كل مريض وفقًا لحالته الصحية.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text2_physiotherapy">يقدم قسم العلاج الطبيعي في مجمع جاردينيا الطبي برامج تأهيلية متكاملة تهدف إلى تحسين الحركة، تخفيف الألم، واستعادة الوظائف الجسدية بعد الإصابات أو العمليات الجراحية.</p>
+              <p class="text-block__desc mb-20" data-lang="services_text3_physiotherapy"> يعتمد الفريق على أحدث التقنيات العلاجية وأساليب العلاج اليدوي والتمارين العلاجية لمساعدة المرضى على تحقيق أفضل النتائج. كما يتم تصميم خطط العلاج بشكل فردي لتناسب احتياجات كل مريض وفقًا لحالته الصحية.</p>
             </div><!-- /.text-block -->
 
             <ul class="list-items list-unstyled mb-60 pl-40">
-              <li data-lang="services_single19_text_list">يشمل العلاج الطبيعي تأهيل ما بعد العمليات والإصابات الرياضية.</li>
-              <li data-lang="services_single19_text_listt">يشمل العلاج الطبيعي تأهيل ما بعد العمليات والإصابات الرياضية.</li>
-              <li data-lang="services_single19_text_list1">يُساعد على تحسين التوازن والوقاية من المضاعفات المزمنة.</li>
+              <li data-lang="services_list_text1_physiotherapy">يشمل العلاج الطبيعي تأهيل ما بعد العمليات والإصابات الرياضية.</li>
+              <li data-lang="services_list_text2_physiotherapy">يشمل العلاج الطبيعي تأهيل ما بعد العمليات والإصابات الرياضية.</li>
+              <li data-lang="services_list_text3_physiotherapy">يُساعد على تحسين التوازن والوقاية من المضاعفات المزمنة.</li>
             </ul>
             <div class="text-block mb-50">
               <h5 class="text-block__title" data-lang="text_block_title">قيمنا الأساسية</h5>
@@ -133,24 +133,24 @@
                 <h5 class="widget__title" data-lang="services_widget_title">الخدمات الطبية</h5>
                 <div class="widget-content">
                   <ul class="list-unstyled mb-0">
-                    <li><a href="services-single.html" data-lang= "title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single2.html" data-lang="services_layout1_title2"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-family_medicine.html" data-lang= "services_title_family_medicine"><span>طب الأسرة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-orthopedic_surgery.html" data-lang="services_title_orthopedic_surgery"><span> جراحة العظام</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-cosmetic.html" data-lang="services_title_cosmetic"><span>جراحة التجميل والترميم</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single1.html" data-lang="footer_department_item4"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-hand_surgery.html" data-lang="services_title_hand_surgery"><span> جراحة اليد</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-day_surgery.html" data-lang="services_title_surgery"><span>الجراحة في نفس اليوم</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-anesthesia.html" data-lang="services_title_anesthesia"><span>التخدير </span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single_1.html" data-lang="services_layout1_title8"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single9.html" data-lang="services_layout1_title7"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single10.html" data-lang="footer_department_item5"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-radiology.html" data-lang="services_title_radiology"><span>الأشعة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-general_surgery.html" data-lang="services_title_general_surgery"><span>الجراحة العامة وجراحات السمنة</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-internal_medicine.html" data-lang="services_title_internal_medicine"><span>الطب الباطني</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-dermatology.html" data-lang="services_title_dermatology"><span>الأمراض الجلدية والليزر</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single12.html" data-lang="services_widget_item1"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single13.html" data-lang="footer_department_item7"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single14.html" data-lang="services_widget_item2"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single16.html" data-lang="footer_department_item8"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-gastroenterology.html" data-lang="services_title_gastroenterology"><span>أمراض الجهاز الهضمي</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-obstetrics.html" data-lang="services_title_obstetrics"><span> النساء والتوليد</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-outpatient.html" data-lang="services_title_outpatient"><span>العيادات الخارجية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-laboratory.html" data-lang="services_title_laboratory"><span> المختبر</span><i class="icon-arrow-right"></i></a></li>
                     <li><a href="services-ent.html" data-lang="services_title_ent"><span>الأنف والأذن والحنجرة </span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single18.html" data-lang="title_family_medicine0"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single19.html" data-lang="title_family_medicine_1"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
-                    <li><a href="services-single18_.html" data-lang="services_widget_item3"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-nutrition.html" data-lang="services_title_nutrition"><span> التغذية</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-physiotherapy.html" data-lang="services_title_physiotherapy"><span> العلاج الطبيعي</span><i class="icon-arrow-right"></i></a></li>
+                    <li><a href="services-pharmacy.html" data-lang="services_title_pharmacy"><span> الصيدلية</span><i class="icon-arrow-right"></i></a></li>
                   </ul>
                 </div><!-- /.widget-content -->
               </div><!-- /.widget-services -->
